@@ -15,8 +15,6 @@ Priority Issues (Fix These First)
   - disabling qualifiers when tests are underway and special regression
     tests for the same. (tests)
   - should subprogram parameters allow qualifiers?
-- passing resources from parameterized types.  Also, what happens when the
-  parameters are destroyed...we don't want the resource to be destroyed also
 - unstructured scripts
   - additional examples to be added to automated tests
 - affirm blocks
@@ -30,8 +28,6 @@ Priority Issues (Fix These First)
       even if the template isn't parsed.
     - update distance example html
     - quote handling on first shell word
-    - env isn't showing limited variables properly (property missing).  This
-      probably has to do with changes to support both types and variables.
     - ../../../spar not found?
     - control-c is propogating to all child processes when it shouldn't
       - check SIGPIPE handling also
@@ -43,6 +39,8 @@ Annoyances / Bugs with Workarounds / Updates
 
 - parameterized types cannot be renamed
 - parameterized types cannot be used as subprogram parameters
+  - passing resources from parameterized types.  Also, what happens when the
+    parameters are destroyed...we don't want the resource to be destroyed also
 - add annotate/categories to example programs representing the example groupings
   they belong to
 - problem extracting byte code for blocks (copying whole lines)
